src/objects/ADvendio__City__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the Geo Targeting Tree, only active marked records will be available.</description>
        <inlineHelpText>In the Geo Targeting Tree, only active marked records will be available.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdTech_ID__c</fullName>
        <description>Enter the ID as assigned to this particular city by AdTech.</description>
        <inlineHelpText>Enter the ID as assigned to this particular city by AdTech.</inlineHelpText>
        <label>AdTech-ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Adition_ID__c</fullName>
        <description>Enter the ID as assigned to this particular city by Adition.</description>
        <inlineHelpText>Enter the ID as assigned to this particular city by Adition.</inlineHelpText>
        <label>Adition-ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the country in which this city is located.</description>
        <inlineHelpText>Enter the country in which this city is located.</inlineHelpText>
        <label>Country</label>
        <referenceTo>ADvendio__Country__c</referenceTo>
        <relationshipLabel>Cities</relationshipLabel>
        <relationshipName>Cities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Dart_ID__c</fullName>
        <description>Enter the ID as assigned to this particular city by Dart.</description>
        <inlineHelpText>Enter the ID as assigned to this particular city by Dart.</inlineHelpText>
        <label>Dart-ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Dfp_ID__c</fullName>
        <description>Enter the ID as assigned to this particular city by DFP.</description>
        <inlineHelpText>Enter the ID as assigned to this particular city by DFP.</inlineHelpText>
        <label>Dfp-ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__LiveRailId__c</fullName>
        <label>LiveRail-ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__NuggAd_ID__c</fullName>
        <description>Enter the ID as assigned to this particular city by NuggAd.</description>
        <inlineHelpText>Enter the ID as assigned to this particular city by NuggAd.</inlineHelpText>
        <label>NuggAd-ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the region in which this city is located.</description>
        <inlineHelpText>Enter the region in which this city is located.</inlineHelpText>
        <label>Region</label>
        <referenceTo>ADvendio__Region__c</referenceTo>
        <relationshipLabel>Cities</relationshipLabel>
        <relationshipName>Cities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Smart_ID__c</fullName>
        <description>Enter the ID as assigned to this particular city by Smart.</description>
        <inlineHelpText>Enter the ID as assigned to this particular city by Smart.</inlineHelpText>
        <label>Smart-ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>Enter a Unique Key for this City.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a Unique Key for this City.</inlineHelpText>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADvendio__X247MediaId__c</fullName>
        <label>24/7 Media ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Surcharge__c</fullName>
        <description>Aufschlag für Targeting</description>
        <inlineHelpText>Aufschlag für Targeting</inlineHelpText>
        <label>Aufschlag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Zuschlagspflichtig__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wenn diese Checkbox aktiv ist werden vom Adpec die Targeting-Zuschläge aktiviert und an das LineItem übertragen und zu den Zuschlägen hinzugezogen.</description>
        <inlineHelpText>Wenn diese Checkbox aktiv ist werden vom Adpec/Werbemittel/Produkt die Targeting-Zuschläge aktiviert und an das LineItem übertragen und zu den Zuschlägen hinzugezogen.</inlineHelpText>
        <label>Zuschlagspflichtig</label>
        <type>Checkbox</type>
    </fields>
    <label>City</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Country__c</columns>
        <columns>ADvendio__Region__c</columns>
        <columns>SomDig_Surcharge__c</columns>
        <columns>ADvendio__Dfp_ID__c</columns>
        <columns>ADvendio__Smart_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>City Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>